Update users service